CXDEVII-1290: media query to fix the margin on region-content on mobile

--- a/layout/structure/_main.scss
+++ b/layout/structure/_main.scss
@@ -44,6 +44,17 @@
   }
 }
 
+@include breakpoint($brk-mobile) {
+  .region-content {
+    margin: 0px;
+  }
+}
+
+  section.scroll {
+    @include rem('margin-left', 170);
+  }
+}
+
 @include breakpoint($brk-large-desktop) {
 
   .wrapper {
